[package]
name = "lnurl-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
cln-rpc = "0.1"
ureq = { version = "2.9", features = ["json"] }
url = "2.5"
secp256k1 = "0.28"
urlencoding = "2.1"
hex = "0.4"
